# dicom2img

./: .gitignore  README.adoc  pyproject.toml
dicom2img/: dicom.py  dicom2img.py  dicomdir.py
